--- a/ga/main.css
+++ b/ga/main.css
@@ -1,13 +1,3 @@
-body {
-    background-color: #fcfbf0;
-}
-#boxes {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-}
-
 #tsp-canvas {
     border: 2px solid black;
     border-radius: 3px;
@@ -17,20 +7,19 @@ body {
 }
 
 #settings {
-    width: 630px;
     font-family: 'Lato', sans-serif;
     border: 1px solid black;
-    padding: 0 10px 10px 10px;
+    float: left;
+    padding: 10px;
+    top: 15px;
+    left: 15px;
+    position: absolute;
     border-radius: 2px;
 }
-#buttons {
-    display: flex;
-}
-button {
-    margin: 7px;
-    border: 1px solid black;
-    display: inline-block;
+
+#solve {
     background-color: #2E5894;
+    border: none;
     padding: 5px 7px 5px 7px;
     font-family: 'Lato', sans-serif;
     font-weight: bold;
@@ -38,17 +27,6 @@ button {
     color: white;
     border-radius: 1px;
     width: 100px;
-}
-
-#log-box {
-    height: 300px;
-    max-height: 300px;
-    width: 630px;
-    overflow-y: auto;
-    font-family: 'Lato', sans-serif;
-    border: 1px solid black;
-    padding: 10px;
-    border-radius: 2px;
 }
 
 table {
